--- a/web/src/style/themes/dark.css
+++ b/web/src/style/themes/dark.css
@@ -1,3 +1,8 @@
+:root {
+  --primary: var(--purple);
+  --secondary: var(--orange);
+}
+
 body {
   background-color: #222 !important;
   color: white !important;
